--- a/src/theme.css
+++ b/src/theme.css
@@ -16,7 +16,7 @@ body.theme-light {
   --nav-bg: #fff;
   --nav-btn-bg: #eaeaea;
   --nav-btn-color: #222;
-  background-image: url('/src/uiResources/background.jpg');
+  background-image: url('/src/uiResources/ligth.jpg');
 }
 
 
