--- a/src/styles/LoadingScreen.css
+++ b/src/styles/LoadingScreen.css
@@ -1,18 +1,18 @@
-/* src/styles/LoadingScreen.css */
+
 .loading-screen {
-  position: fixed;      /* ocupa toda la pantalla */
+  position: fixed;     
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.7); /* semi-oscuro */
+  background: rgba(0, 0, 0, 0.7); 
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 9999;        /* por encima de todo */
+  z-index: 9999;        
 }
 
 .loading-gif {
-  width: 150px;         /* ajústalo al tamaño que quieras */
+  width: 150px;         
   height: auto;
 }
